refactor: remove deprecated system transaction handling from various testing tools
Signed-off-by: Mustafa Uzun <mustafa.uzun@limechain.tech>